Fix filters wrapping

--- a/css/app.css
+++ b/css/app.css
@@ -33,6 +33,9 @@ body {
 
 .filters {
     font-size: 15px;
+    white-space: nowrap;
+    overflow: visible;
+    width: 100%;
 }
 
 .chosen-container {
